# local-code-agent

./: .coverage  .coveragerc  .gitignore  ARCHITECTURE.md  AUTOMATIC_INTEGRATION.md  CLAUDE_CODE_GAP_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  SPRINT2_COMPLETE.md  SPRINT3_COMPLETE.md  SPRINT4_COMPLETE.md  SPRINT5_COMPLETE.md  SPRINT6_COMPLETE.md  SPRINT_ROADMAP.md  main.py  pyproject.toml  pytest.ini  requirements.txt  test_cli.py  test_diff_validation.py  test_mock_mode.py  test_sprint1_features.py  test_workflow.py  tmp_anchor.txt
.cursor/rules/: fast-repo-scan.mdc
.github/workflows/: ci.yml
.lca/: graph_cache.json  history.db  summary.json
.lca/sessions/: session_20260128_223136.json  session_20260128_223355.json
agent/: __init__.py  cli.py  context_builder.py  debugger.py  decomposer.py  error_analyzer.py  executor.py  failure_analyzer.py  loop.py  performance.py  planner.py  prompt_engineer.py  reasoner.py  refactor.py  refiner.py  reviewer.py  session_commands.py  syntax_checker.py  task_classifier.py  templates.py  test_detector.py  test_intelligence.py  test_runner.py  validator.py  watcher.py
core/: config.py  config_file.py  exceptions.py  llm.py  llm_backends.py  rate_limiter.py  resources.py  security.py
memory/: call_graph.py  conversation.py  dependencies.py  feedback.py  graph_cache.py  history.py  index.py  knowledge_graph.py  patterns.py  project_conventions.py  semantic_search.py  summary_cache.py  symbols.py
tests/: __init__.py  test_apply_patch.py  test_executor.py  test_planner.py  test_sessions.py  test_sprint9.py
tools/: __init__.py  apply_patch.py  diff.py  factorial.py  git_diff.py  git_operations.py  git_status.py  read_file.py
