
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-code-agent"
version = "0.1.0"
description = "Terminal-first offline code agent using Ollama with diff-only workflow."
authors = [{ name = "Local Agent", email = "noreply@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.26",
  "GitPython>=3.1",
  "tomli>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=4.1",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true

[project.scripts]
local-code-agent = "agent.cli:app"
lca = "agent.cli:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agent", "core", "memory", "tools"]

[tool.hatch.build.targets.sdist]
include = ["agent", "core", "memory", "tools", "README.md", "requirements.txt"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 100
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "PL"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
